themes/default/kd.contextmenu.styl
@import "./kdfn"
@import "nib/gradients"



/*
**  JContextMenu STYLES
*/
.jcontextmenu
  abs()
  display                 inline-block
  height                  auto
  overflow                visible
  z-index                 10000
  cursor                  default

  .context-list-wrapper
    padding               5px 0
    overflow              visible

  .kdlistview-contextmenu.default
    margin                0
    padding               5px 0
    size                  auto,auto
    min-width             150px
    overflow              visible
    bg                    color,rgba(255,255,255,.95)
    shadow                0 7px 15px rgba(0,0,0,.17)
    border                1px solid rgb(187,187,187)
    rounded               4px

    .kdlistview-contextmenu.default
      margin-top          -27px
      rounded             0 4px 4px 0
      abs()
      left                100%
      min-width           160px
      &.left-aligned
        rounded           4px 0 0 4px

  .kdlistitemview-contextitem.default
    font-size         .9em
    background-color  transparent
    border-bottom     none
    padding           3px 10px
    clear             both
    color             #444
    cursor            pointer
    border-top        1px solid transparent
    border-bottom     1px solid transparent
    size              auto,auto
    min-width         100px

    &.selected
      border          1px solid #89bdf2
      border-width    1px 0
      border-color    finderSelectedColor2 transparent finderSelectedColor1 transparent
      color           white
      text-shadow     0 -1px 0 rgba(0,0,0,0.22)
      bg              color, finderSelectedColor1
      &:hover
        bg            color, finderSelectedColor1

    &:hover
      background      transparent

    &.disabled
      opacity         .5

    &.has-sub-items
      span.arrow
        abs()
        right               2px
        top                 6px
        size                8px,8px
        border              4px solid transparent
        border-left-color   #666
        borderBox()
      &.selected
        span.arrow
          border-left-color white
    &.separator
      height            0
      margin            2px 0
      padding           0
      border-bottom     1px solid rgb(213,213,213)
      &:hover
        border-bottom   1px solid rgb(213,213,213)
        bg              color,transparent!important
        bg              image,none!important

  > span.arrow
    z-index             9002
    size                15px 15px
    bg                  color, transparent
    kdfsprite()
    abs()
    &.top
      bg                position, -240px -560px
    &.right
      bg                position, -220px -560px
    &.bottom
      bg                position, -200px -560px
    &.left
      bg                position, -260px -560px

